# django_createdb

./: .gitignore  .pre-commit-config.yaml  README.md  env.sample  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: codeq.yml  python.yml
createdb/management/commands/: _lib.py  createdb.py
django_createdb/: settings.py
